force-app/main/default/objects/QuoteRequestFamily__c/QuoteRequestFamily__c.object-meta.xml
<CustomObject>
    <label>Quota Request Family</label>
    <nameField>
        <displayFormat>Quote Request #{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Requests Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>