force-app/main/default/objects/QuoteRequestFamily__c/fields/AddQty_pcs__c.field-meta.xml
<CustomField>
    <fullName>AddQty_pcs__c</fullName>
    <label>Add Qty (pcs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>