force-app/main/default/objects/QuoteRequestFamily__c/fields/CorrectedPercent__c.field-meta.xml
<CustomField>
    <fullName>CorrectedPercent__c</fullName>
    <label>New Percent (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>