force-app/main/default/objects/QuoteRequestFamily__c/fields/DeltaPercent__c.field-meta.xml
<CustomField>
    <fullName>DeltaPercent__c</fullName>
    <formula>CorrectedPercent__c - Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Δ Percent (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>