force-app/main/default/objects/QuoteRequestFamily__c/fields/Diff_Quote_t__c.field-meta.xml
<CustomField>
    <fullName>Diff_Quote_t__c</fullName>
    <formula>CorrectedQuote_t__c -  Quote_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Δ Quote (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>