force-app/main/default/objects/QuoteRequestFamily__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipName>Quote_Requests_Families</relationshipName>
    <type>Lookup</type>
</CustomField>