force-app/main/default/objects/QuoteRequestFamily__c/fields/QuoteRequest__c.field-meta.xml
<CustomField>
    <fullName>QuoteRequest__c</fullName>
    <formula>QuoteRequestHeader__r.Request_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Request</label>
    <type>Text</type>
</CustomField>