force-app/main/default/objects/QuoteRequestFamily__c/fields/RoutesQuotesH__c.field-meta.xml
<CustomField>
    <fullName>RoutesQuotesH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Quotes Hierarchy</label>
    <referenceTo>RouteQuotesH__c</referenceTo>
    <relationshipLabel>Quote Requests Families</relationshipLabel>
    <relationshipName>Quota_Requests_Families</relationshipName>
    <type>Lookup</type>
</CustomField>