force-app/main/default/objects/QuoteRequestFamily__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Quote_Requests_Families</relationshipName>
    <type>Lookup</type>
</CustomField>