force-app/main/default/objects/QuoteRequestFamily__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shop__c</columns>
    <columns>FamilyType__c</columns>
    <columns>Family__c</columns>
    <columns>Percent__c</columns>
    <columns>Quote_t__c</columns>
    <columns>AddQty_t__c</columns>
    <columns>RoutesQuotesH__c</columns>
    <columns>QuoteRequest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>